packages/pluggableWidgets/image-web/src/ui/Image.scss
.mx-image-viewer {
    width: 100%;
    height: 100%;
}

.mx-image-viewer-responsive img {
    max-width: 100%;
    max-height: 100%;
    display: block;
}

.mx-image-viewer-lightbox-backdrop {
    // Should be higher than the z-index of `.layout-atlas .region-sidebar` so it sits on top of the page.
    z-index: 110;
    background-color: rgba(0, 0, 0, 0.85);
    position: fixed;
    inset: 0px;

    .close-button {
        position: absolute;
        top: 30px;
        right: 30px;
        color: white;
        display: flex;
        background: none;
        border: none;
        padding: 8px;
        cursor: pointer;

        .removeIcon {
            height: 16px;
            width: 16px;
        }
    }
}

.mx-image-viewer-lightbox {
    // Should be higher than the z-index of `.mx-image-viewer-lightbox-backdrop`.
    z-index: 210;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.mx-image-viewer.mx-image-background {
    background-repeat: no-repeat;
    background-position: center;
}

